<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:gravity="center">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_from_virtual_assistant"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manually_create_option"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_option"
            android:textColor="@color/holo_blue_light"
            android:background="@android:color/transparent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
