<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:minHeight="48dp">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autofillHints="sms"
            android:hint="@string/write_message_placeholder"
            android:textColorHint="@color/hint_color"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="25dp"
            android:fontFamily="@font/roboto"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button"
            android:text="@string/send"
            android:textAllCaps="true"
            android:minHeight="48dp"/>
    </LinearLayout>
</LinearLayout>
