...

    <string name="t_continue">Continuar</string>

    <string name="c_t_redirect">Redirigiendo</string>
    <string name="c_b_redirect">en 3 segundos.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_login">No se pudo autenticar en el sistema</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="error_fetch_user_info">Error al obtener la información del usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragment en blanco</string>
    <string name="error_create_incident">Error creando el incidente</string>
    <string name="incident_cover_image_alt">Incidencia con ID %s y asunto %s</string>
...
