<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.IncidentDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/incident_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/incident"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:id="@+id/incident_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    tools:text="Asunto aliquam erat vls" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/incidentStatusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/incidentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/incidentIDLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_incident_label"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/incidentID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/incidentCreationDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creation_date_incident_label"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/incidentCreationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/incident_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/description_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:id="@+id/incident_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper luctus ante, ut maximus nulla auctor sed." />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/agent_response_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/agent_response_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />
            <TextView
                android:id="@+id/agent_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Quisque ac consectetur sem, a mattis turpis. Etiam imperdiet egestas arcu sit amet dapibus." />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
